carrocelsandrano paginacio header

--- a/product/templates/partials/footer.html
+++ b/product/templates/partials/footer.html
@@ -24,6 +24,7 @@
                         </div>
                     </div>
                 </div>
+                
                 <div class="col-xl-4 col-md-4 mb-30">
                     <div class="single-cta">
                         <i class="far fa-envelope-open"></i>
@@ -33,21 +34,8 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
-        <div class="footer-content pt-5 pb-5">
-            <div class="row">
-                <div class="col-xl-4 col-lg-4 mb-50">
-                    <div class="footer-widget">
-                        <div class="footer-logo">
-                            <a href="index.html"><img src="{% static '/img/logoXilena.jfif' %}" class="img-fluid" alt="logo"></a>
-                        </div>
-                        <div class="footer-text">
-                            <p>Muestra tu lado más artístico, con nuestros accesorios únicos y hechos a mano</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-4 col-lg-4 col-md-6 mb-30">
+                <div class="linea "></div>
+                <div class="col-xl-4  col-md-4 mb-30">
                     <div class="footer-widget">
                         <div class="footer-social-icon">
                             <span>Siguenos</span>
@@ -58,14 +46,14 @@
                     </div>
                 </div>
                 
-                <div class="col-xl-4 col-lg-4 col-md-6 mb-50">
+                <div class="col-xl-4  col-md-4 mb-30">
                     <div class="footer-widget">
                         <div class="footer-widget-heading">
                             <h3>Subscribete</h3>
                         </div>
-                        <div class="footer-text mb-25">
+                        <!--<div class="footer-text mb-25">
                             <p>No deje de suscribirse a nuestros nuevos diseños, complete el formulario a continuación.</p>
-                        </div>
+                        </div>-->
                         <div class="subscribe-form">
                             <form action="#">
                                 <input type="text" placeholder="Email">
@@ -76,7 +64,6 @@
                         
                     </div>
                 </div>
-                
             </div>
         </div>
     </div>
