--- a/product/templates/home.html
+++ b/product/templates/home.html
@@ -59,10 +59,38 @@
 <div class="container-fluid pt-5">
     <div class="text-center mb-4">
         <div>
-            <h2 class="productos-titulo px-5"><span class="px-2">Productos</span></h2>
+            <h2 class="productos-titulo px-2"><span>Productos</span></h2>
         </div>
         <div class="product-container">
             {% for producto in products %}
+            <div class="producto">
+                <div class="ui-card">
+                    <img src="{{ producto.image.url }}">
+                    <div class="description">
+                        <a href="#">anadir al carro</a>
+                        <a href="{% url 'productViews'%}">Ver producto</a>
+                    </div>
+                </div>
+                <div class="card-content">
+                    <h2 class="card-title">{{ producto.Product }}</h2>
+                    <p class="card-description">{{ producto.description }}</p>
+                    <p class="card-price">{{ producto.price }}$</p>
+                </div>
+            </div>
+            <div class="producto">
+                <div class="ui-card">
+                    <img src="{{ producto.image.url }}">
+                    <div class="description">
+                        <a href="#">anadir al carro</a>
+                        <a href="{% url 'productViews'%}">Ver producto</a>
+                    </div>
+                </div>
+                <div class="card-content">
+                    <h2 class="card-title">{{ producto.Product }}</h2>
+                    <p class="card-description">{{ producto.description }}</p>
+                    <p class="card-price">{{ producto.price }}$</p>
+                </div>
+            </div>
             <div class="producto">
                 <div class="ui-card">
                     <img src="{{ producto.image.url }}">
@@ -152,7 +180,22 @@
         </div><!--hasta aqui va-->
 
     </div>
-</div> 
+</div>
+
+
+
+
+
+<div class="containerpagi ">
+    <nav>
+        <div>
+            <button class="butpagina"><a href="#"><h1><i class="fa-solid fa-less-than" style="color: #f9fbfb;"></i></h1></a></button>
+            <button class="butpagina"><a href="#" style="text-decoration: none;"><h1>1</h1></a></button>
+            <button class="butpagina"><a href="#" style="text-decoration: none;"><h1>2</h1></a></button>
+            <button class="butpagina"><a href="#"><h1><i class="fa-solid fa-greater-than" style="color: #f7fafa;"></i></h1></a></button>
+        </div>
+    </nav>
+</div>
 <script src="{% static 'js/carrocel.js' %}"></script>
 {% endblock %}
 
