--- a/product/templates/layout/home_layout.html
+++ b/product/templates/layout/home_layout.html
@@ -32,6 +32,8 @@
         {% comment %} 
         <link href=" {% static 'css/recoverPassword.css' %}" rel="stylesheet">
         <link href=" {% static 'css/productViews.css' %}" rel="stylesheet">
+        <link href=" {% static 'css/faq.css' %}" rel="stylesheet">
+        <link href=" {% static 'css/carrtio.css' %}" rel="stylesheet">
         {% endcomment %}
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     </head>
