url de carrito, crud, edit.

--- a/product/templates/carrito.html
+++ b/product/templates/carrito.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Agrega el enlace a Bootstrap -->
-    <link rel="stylesheet" href="static/css/carrito.css">
+    <link href=" {% static 'css/carrito.css' %}" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <title>Carrito de Compras</title>
 
