--- a/product/templates/edit.html
+++ b/product/templates/edit.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
+{% load static %}
+
 {% comment %} julian {% endcomment %}
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Administrador de Productos - Editar producto</title>
-    <link rel="stylesheet" href="estilos/estilos.css">
+    <link href=" {% static 'css/estilos(julian).css' %}" rel="stylesheet">
 </head>
 <body>
     <header>
