--- a/product/templates/home.html
+++ b/product/templates/home.html
@@ -67,7 +67,7 @@
                 <div class="ui-card">
                     <img src="{{ producto.image.url }}">
                     <div class="description">
-                        <a href="#">anadir al carro</a>
+                        <a href="{% url 'carrito'%}">anadir al carro</a>
                         <a href="{% url 'productViews'%}">Ver producto</a>
                     </div>
                 </div>
@@ -81,7 +81,7 @@
                 <div class="ui-card">
                     <img src="{{ producto.image.url }}">
                     <div class="description">
-                        <a href="#">anadir al carro</a>
+                        <a href="{% url 'carrito'%}">anadir al carro</a>
                         <a href="{% url 'productViews'%}">Ver producto</a>
                     </div>
                 </div>
@@ -95,7 +95,7 @@
                 <div class="ui-card">
                     <img src="{{ producto.image.url }}">
                     <div class="description">
-                        <a href="#">anadir al carro</a>
+                        <a href="{% url 'carrito'%}">anadir al carro</a>
                         <a href="{% url 'productViews'%}">Ver producto</a>
                     </div>
                 </div>
@@ -125,7 +125,7 @@
                 <div class="ui-card">
                     <img src="{% static  '/img/Aretes I/2022 3.jpeg' %}">
                     <div class="description">
-                        <a href="#">anadir al carro</a>
+                        <a href="{% url 'carrito'%}">anadir al carro</a>
                         <a href="{% url 'productViews'%}">Ver producto</a>
                     </div>
                 </div>
@@ -139,7 +139,7 @@
                 <div class="ui-card ">
                     <img src="{% static  '/img/Aretes I/2022 4.jpeg' %}">
                     <div class="description">
-                        <a href="#">anadir al carro</a>
+                        <a href="{% url 'carrito'%}">anadir al carro</a>
                         <a href="{% url 'productViews'%}">Ver producto</a>
                     </div>
                 </div>
@@ -153,7 +153,7 @@
                 <div class="ui-card">
                     <img src="{% static  '/img/Aretes I/2022 5.jpeg' %}">
                     <div class="description">
-                        <a href="#">anadir al carro</a>
+                        <a href="{% url 'carrito'%}">anadir al carro</a>
                         <a href="{% url 'productViews'%}">Ver producto</a>
                     </div>
                 </div>
@@ -167,7 +167,7 @@
                 <div class="ui-card">
                     <img src= "{% static  '/img/collaresReferencia/Ref C22001.jpg' %}" >
                     <div class="description">
-                        <a href="#">anadir al carro</a>
+                        <a href="{% url 'carrito'%}">anadir al carro</a>
                         <a href="{% url 'productViews'%}">Ver producto</a>
                     </div>
                 </div>
