--- a/product/templates/partials/footer.html
+++ b/product/templates/partials/footer.html
@@ -51,18 +51,22 @@
                         <div class="footer-widget-heading">
                             <h3>Subscribete</h3>
                         </div>
-                        <!--<div class="footer-text mb-25">
+                        <div class="footer-text mb-25">
+                            
                             <p>No deje de suscribirse a nuestros nuevos diseños, complete el formulario a continuación.</p>
-                        </div>-->
+                        </div>
                         <div class="subscribe-form">
                             <form action="#">
                                 <input type="text" placeholder="Email">
                                 <button><i class="fab fa-telegram-plane"></i></button>
                                 
                             </form>
+                            
                         </div>
                         
                     </div>
+                    <a href="{% url 'CRUD'%}">Ver producto</a>
+                            <a href="{% url 'edit'%}">Ver producto</a>
                 </div>
             </div>
         </div>
