--- a/product/templates/home.html
+++ b/product/templates/home.html
@@ -4,7 +4,24 @@
 
 
 {% block content %} 
+
+
+
+
+
+
+
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 <script src="https://kit.fontawesome.com/26f1c55c36.js" crossorigin="anonymous"></script>
+
+
+
+
+
+
+
+
+
 <!--imagen grande carrocel  -->
 <div class="container-slider">
     <div class="slider" id="slider">
@@ -189,10 +206,10 @@
 <div class="containerpagi ">
     <nav>
         <div>
-            <button class="butpagina"><a href="#"><h1><i class="fa-solid fa-less-than" style="color: #f9fbfb;"></i></h1></a></button>
-            <button class="butpagina"><a href="#" style="text-decoration: none;"><h1>1</h1></a></button>
-            <button class="butpagina"><a href="#" style="text-decoration: none;"><h1>2</h1></a></button>
-            <button class="butpagina"><a href="#"><h1><i class="fa-solid fa-greater-than" style="color: #f7fafa;"></i></h1></a></button>
+            <button class="butpagina"><i class="fa-solid fa-less-than" style="color: #f9fbfb;"></i></button>
+            <button class="butpagina">1</button>
+            <button class="butpagina">2</button>
+            <button class="butpagina"><i class="fa-solid fa-greater-than" style="color: #ffffff;"></i></button>
         </div>
     </nav>
 </div>
