--- a/static/css/estilos.css
+++ b/static/css/estilos.css
@@ -23,13 +23,13 @@
 
 }
 .slider_section{
-  width: 100%;
+  width: 25%;
 
 }
 .slider__img{
   display: block;
   width: 100%;
-  height: 580px;
+  height: 339px;
   object-fit: cover;
 
 }
@@ -38,7 +38,7 @@
   width: 35px;
   height: 65px;
   background: rgba(167, 25, 177, 0.7);
-  top: 50%;
+  top: 55%;
   transform: translateY(-50%);
   font-size: 30px;
   font-weight: bold;
@@ -46,6 +46,9 @@
   text-align: center;
   border-radius: 4px 4px 4px 4px;
   cursor: pointer;
+  display: flex; /* Utilizamos flexbox para centrar contenido */
+  align-items: center; /* Centrar verticalmente */
+  justify-content: center; /* Centrar horizontalmente */s
 }
 
 .slider__btn:hover {
@@ -382,18 +385,21 @@ color: #878787;
 
 .containerpagi {
   text-align: center;
+
 }
 .butpagina{/*botones estilos*/
   border-color: purple;
   background-color: purple;;
   color: #f2f4f7;
-  width: 65px;
-  height: 45px;
+  width: 45px;
+  height: 35px;
   border-radius: 9px 9px 9px 9px;
+  margin-right: 0.5%;
+  font-size: 20px;
 }
-.butpagina h1{
+/*.butpagina h1{
   color: #f2f4f7;
-}
+}*/
 
 
 /*menu*/
@@ -598,7 +604,7 @@ body{
     background: "url(static/img/logoXilena.jfif), lightgray 50% / cover no-repeat";
 }
 .Boton{
-  background-color: #732579;
+  background-color: #337925;
 }
 .iconoWhatsapp #whatsapp-icon {
   font-size: 40px; /* Cambia el tamaño del icono a 32px */
