--- a/product/templates/editarProducto.html
+++ b/product/templates/editarProducto.html
@@ -31,7 +31,7 @@
             </nav>
         </div>
     </header>
-    <p class="retornoAdmin"><a href="CRUD.html">Administrador de Productos ></a>> Editar Producto</p>
+    <p class="retornoAdmin"><a href="{% url 'CRUD'%}">Administrador de Productos ></a>> Editar Producto</p>
     <main>
         <section class="cabecera">
             <h3 class="tituloCab">Editar producto</h3>
