--- a/product/templates/partials/footer.html
+++ b/product/templates/partials/footer.html
@@ -65,8 +65,7 @@
                         </div>
                         
                     </div>
-                    <a href="{% url 'CRUD'%}">Ver producto</a>
-                            <a href="{% url 'edit'%}">Ver producto</a>
+                    <a href="{% url 'CRUD'%}">Administrador de producto</a>
                 </div>
             </div>
         </div>
