--- a/static/css/productViews.css
+++ b/static/css/productViews.css
@@ -1,4 +1,4 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@30/******* Bootstrap Theming ********/
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@30/******* Bootstrap Theming ********/
 /*!
  * Bootstrap v4.5.3 (https://getbootstrap.com/)
  * Copyright 2011-2020 The Bootstrap Authors
@@ -34,7 +34,7 @@
   --breakpoint-xl: 1200px;
   --font-family-sans-serif: "Roboto", sans-serif;
   --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-} */
+}
 
 *,
 *::before,
