--- a/product/templates/partials/footer.html
+++ b/product/templates/partials/footer.html
@@ -38,6 +38,7 @@
             </div>
         </div>
         </footer>
-        
+        <script src="https://kit.fontawesome.com/ebe9c53298.js" crossorigin="anonymous"></script>
+
 </body>
 </html>
