--- a/static/css/faq.css
+++ b/static/css/faq.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #732579;
+    background-color: #8e2264;
     padding: 20px;
 }
 
