--- a/product/templates/partials/footer.html
+++ b/product/templates/partials/footer.html
@@ -29,9 +29,9 @@
                 <div class="wrapper">
                 <h4>Síguenos en las redes</h4>
                 <ul class="social-icons">
-                    <li class="whatsapp"><a href="https://api.whatsapp.com/send?phone=573108683109&text"><i class="fa fa-whatsapp fa-2x" aria-hidden="true"></i></a></li>
-                    <li class="facebook"><a href="https://web.facebook.com/xilenadesigns?_rdc=1&_rdr"><i class="fa fa-facebook fa-2x" aria-hidden="true"></i></a></li>
-                    <li class="instagram"><a href="https://www.instagram.com/xilenadesigns/"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a></li>
+                    <li class="whatsapp"><a href="https://api.whatsapp.com/send?phone=573108683109&text" target="_blank"><i class="fa fa-whatsapp fa-2x" aria-hidden="true"></i></a></li>
+                    <li class="facebook"><a href="https://web.facebook.com/xilenadesigns?_rdc=1&_rdr" target="_blank"><i class="fa fa-facebook fa-2x" aria-hidden="true"></i></a></li>
+                    <li class="instagram"><a href="https://www.instagram.com/xilenadesigns/" target="_blank"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a></li>
                 </ul>
                 </div>
             </div>
