--- a/static/css/carrito.css
+++ b/static/css/carrito.css
@@ -19,7 +19,7 @@ body {
 
 .product img {
     max-width: 100px;
-    margin-bottom: 20px; /* Espacio entre la imagen y los elementos debajo */
+    margin-bottom: 20px;
     aspect-ratio: 1/1;
     object-fit: cover;
 }
@@ -47,22 +47,7 @@ body {
     font-weight: bold;
 }
 
-.total {
-    text-align: center;
-    margin-top: 20px;
-    font-size: 24px;
-    font-weight: bold;
-}
-
-.button-container {
-    text-align: center; /* Centra horizontalmente el contenido */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh; /* Esto centra verticalmente el contenido */
-}
-
+/* Estilo para el botón de Comprar */
 /* Estilo para el botón de Comprar */
 .comprar-button {
     background-color: #45db34;
@@ -70,8 +55,30 @@ body {
     padding: 10px 20px;
     font-size: 16px;
     cursor: pointer;
+
+    /* Añade flexbox para centrar el botón */
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .comprar-button:hover {
     background-color: #2eb929;
+}
+
+/* Estilo para el contenedor del botón */
+.button-container {
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.total {
+    position: fixed;
+    top: 0;
+    color: #000000;
+    text-align: center;
+    font-size: 30px;
 }
